Updated '_layouts/post.html' via CloudCannon

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,7 @@ layout: default
   </header>
 
   <section class="style4 wrapper container">
+    <img src="{{page.image_path}}"/>
     {{ content }}
   </section>
     
