--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 					<ul>
 						<li><a href="/">Welcome</a></li>
                         <li><a href="/blog.html">Blog</a></li>
-                        <li><a href="/wod/wods.html">WOD</a></li>
+                        <li><a href="/wods/wods.html">WOD</a></li>
 						<li class="submenu">
 							<a href="">Layouts</a>
 							<ul>
